# griso

./: CMakeLists.txt  GTSI.cpp  GTSI.h  LICENSE  README  README.md  SIDT.cpp  SIDT.h  dot2edg.cpp  dot2edg.h  edg2dot.cpp  edg2dot.h  graphBinAlgo.c  graphBinAlgo.h  libGTSI.cpp  libGTSI.h  libGraphBinAlgo.c  libGraphBinAlgo.h  libSIDT.cpp  libSIDT.h  tests.cpp  tests.h
doc/: Makefile
doc/src/: SIDT.tex
libs/dict/: dict.c  dict.h
libs/dotparser/: Expression.c  Expression.h  Lexer.l  Parser.y  graphParser.c  main.c  main.h
libs/include/: file_access.h  my_assert.h  return_status.h  swap.h  symbol.h
libs/libgraph/: graph.c  graph.h  graphIO.c  graphIO.h  node.c  node.h  nodeIO.c  nodeIO.h  node_list.c  node_list.h
libs/rb_tree/: rb.c  rb.h
libsGTSI/: utils-gtsi.h
libsGTSI/Traversal/: Traversal.cpp  Traversal.hpp
libsSIDT/BFSGraph/: BFSGraph.c  BFSGraph.h
libsSIDT/Prog/: prog.c  prog.h
libsSIDT/decisionTree/: decisionNode.c  decisionNode.h  decisionTree.c  decisionTree.h  hashTable.c  hashTable.h
libsSIDT/funcInfo/: funcInfo.c  funcInfo.h
tests_graphs/: Makefile
tests_graphs/test0/: pattern.dot  test.edg
tests_graphs/test1/: test.dot  test.edg
tests_graphs/test2/: test.edg  test_p.edg
tests_graphs/test3/: test.dot
tests_graphs/test4/: test.dot
tests_graphs/test5/: test.dot  test_p.dot
tests_graphs/test6/: pattern_2.dot  test.dot
